--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
+    "@angular/fire": "^7.4.1",
     "@angular/forms": "^14.0.0",
     "@angular/material": "^14.0.4",
     "@angular/platform-browser": "^14.0.0",
@@ -22,7 +23,9 @@
     "@angular/router": "^14.0.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
+    "firebase": "^9.9.0",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.23",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
